# Nota

./: .gitignore  CODE_REVIEW.md  README.md  process.md  pubspec.yaml  traps.md
.github/workflows/: build-ios.yml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: hotword.dart  note.dart  recording_session.dart  speaker_profile.dart  transcript.dart
lib/presentation/data/: data_management_screen.dart
lib/presentation/home/: home_screen.dart
lib/presentation/hotwords/: hotword_screen.dart
lib/presentation/notes/: note_detail_screen.dart  note_list_screen.dart
lib/presentation/recording/: recording_screen.dart
lib/presentation/settings/: about_screen.dart  ai_router_screen.dart  asr_settings_screen.dart  settings_screen.dart
lib/presentation/speakers/: speaker_screen.dart
lib/presentation/transcripts/: transcript_screen.dart
lib/presentation/widgets/: ai_config_selector.dart
lib/providers/: ai_config_provider.dart
lib/routes/: app_router.dart
lib/services/asr/: asr_engine.dart  asr_model_info.dart  asr_model_manager.dart  cloud_asr_engine.dart  hotword_dictionary.dart  isolate_asr_worker.dart  local_asr_engine.dart  realtime_asr_engine.dart  vad_detector.dart  whisper_engine.dart  whisper_ffi.dart  whisper_isolate_worker.dart
lib/services/audio/: dual_track_recorder.dart  mic_recorder.dart  speaker_recorder.dart
lib/services/llm/: ai_providers.dart  llm_engine.dart  (+9 more)
tool/: create_release.dart
tool/whisper-build/: CMakeLists.txt  whisper.exports  whisper_wrapper.c
(+16 files in other folders)
